# beh

./: README.md  experiment.py  port_open_send.py  requirements.txt
in-person/: main.py  pyproject.toml
online/chunk_includes/: begin.html  consent.html  final.html  instructions.html  practice.csv  prolific.html  stimuli.csv  validation.html  welcome.html
online/data_includes/: main.js
stimuli/: experiment.csv  feedback.csv  practice.csv
