[project]
name = "beh"
version = "0.1.0"
description = "in-person behavioral experiment template"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ipython>=8.37.0",
    "mne>=0.24.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "psychopy>=2024.1",
    "pyserial>=3.5",
    "scikit-learn>=1.0.0"
]
